--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vuetify": "^2.1.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
         "@babel/plugin-proposal-optional-chaining": "^7.7.5",
         "@types/jest": "^24.0.19",
         "@vue/cli-plugin-babel": "^4.1.0",
